--- a/11.html
+++ b/11.html
@@ -15,11 +15,96 @@
   </head>
   <body>
     <div class="container-fluid">
+      <div
+        class="row bg-dark text-light fs-2 align-items-center sticky-top"
+        style="height: 60px"
+      >
+        <div class="col">TweetBook</div>
+      </div>
+
       <div class="row">
+        <!-- LEFT -->
         <div class="d-none d-md-block col-md-3">
-          <!-- MENUS-->
-          LEFT
+          <div class="my-2">
+            <img
+              src="https://picsum.photos/100"
+              alt=""
+              style="width: 50px; height: 50px; border-radius: 50%"
+            />
+          </div>
+          <div class="mb-1">
+            <input
+              class="btn btn-outline-secondary btn-lg w-100"
+              type="button"
+              value="Home"
+            />
+          </div>
+          <div class="mb-1">
+            <input
+              class="btn btn-outline-secondary btn-lg w-100"
+              type="button"
+              value="Explore"
+            />
+          </div>
+          <div class="mb-1">
+            <input
+              class="btn btn-outline-secondary btn-lg w-100"
+              type="button"
+              value="Notifications"
+            />
+          </div>
+          <div class="mb-1">
+            <input
+              class="btn btn-outline-secondary btn-lg w-100"
+              type="button"
+              value="Messages"
+            />
+          </div>
+          <div class="mb-1">
+            <input
+              class="btn btn-outline-secondary btn-lg w-100"
+              type="button"
+              value="Bookmarks"
+            />
+          </div>
+          <div class="mb-1">
+            <input
+              class="btn btn-outline-secondary btn-lg w-100"
+              type="button"
+              value="Home"
+            />
+          </div>
+          <div class="mb-1">
+            <input
+              class="btn btn-outline-secondary btn-lg w-100"
+              type="button"
+              value="Explore"
+            />
+          </div>
+          <div class="mb-1">
+            <input
+              class="btn btn-outline-secondary btn-lg w-100"
+              type="button"
+              value="Notifications"
+            />
+          </div>
+          <div class="mb-1">
+            <input
+              class="btn btn-outline-secondary btn-lg w-100"
+              type="button"
+              value="Messages"
+            />
+          </div>
+          <div class="mb-1">
+            <input
+              class="btn btn-outline-secondary btn-lg w-100"
+              type="button"
+              value="Bookmarks"
+            />
+          </div>
         </div>
+
+        <!-- MAIN CONTENT -->
         <div class="col-12 col-md-6">
           <div class="row mb-1">
             <div
@@ -29,12 +114,15 @@
                 d-flex
                 justify-content-center
                 align-items-center
-                fs-3
+                fs-4
                 text-light
               "
-              style="height: 100px"
+              style="height: 250px"
             >
-              Hello World
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+              odit incidunt impedit quam quos corporis consectetur magni nemo
+              ipsa doloribus, eaque nulla deserunt qui delectus, veritatis,
+              officia harum. Exercitationem, maiores.
             </div>
           </div>
 
@@ -46,12 +134,15 @@
                 d-flex
                 justify-content-center
                 align-items-center
-                fs-3
+                fs-4
                 text-light
               "
-              style="height: 100px"
+              style="height: 250px"
             >
-              Hello World
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+              odit incidunt impedit quam quos corporis consectetur magni nemo
+              ipsa doloribus, eaque nulla deserunt qui delectus, veritatis,
+              officia harum. Exercitationem, maiores.
             </div>
           </div>
 
@@ -63,12 +154,15 @@
                 d-flex
                 justify-content-center
                 align-items-center
-                fs-3
+                fs-4
                 text-light
               "
-              style="height: 100px"
+              style="height: 250px"
             >
-              Hello World
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+              odit incidunt impedit quam quos corporis consectetur magni nemo
+              ipsa doloribus, eaque nulla deserunt qui delectus, veritatis,
+              officia harum. Exercitationem, maiores.
             </div>
           </div>
 
@@ -80,12 +174,15 @@
                 d-flex
                 justify-content-center
                 align-items-center
-                fs-3
+                fs-4
                 text-light
               "
-              style="height: 100px"
+              style="height: 250px"
             >
-              Hello World
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+              odit incidunt impedit quam quos corporis consectetur magni nemo
+              ipsa doloribus, eaque nulla deserunt qui delectus, veritatis,
+              officia harum. Exercitationem, maiores.
             </div>
           </div>
 
@@ -97,86 +194,44 @@
                 d-flex
                 justify-content-center
                 align-items-center
-                fs-3
+                fs-4
                 text-light
               "
-              style="height: 100px"
+              style="height: 250px"
             >
-              Hello World
-            </div>
-          </div>
-
-          <div class="row mb-1">
-            <div
-              class="
-                col-12
-                bg-secondary
-                d-flex
-                justify-content-center
-                align-items-center
-                fs-3
-                text-light
-              "
-              style="height: 100px"
-            >
-              Hello World
-            </div>
-          </div>
-
-          <div class="row mb-1">
-            <div
-              class="
-                col-12
-                bg-secondary
-                d-flex
-                justify-content-center
-                align-items-center
-                fs-3
-                text-light
-              "
-              style="height: 100px"
-            >
-              Hello World
-            </div>
-          </div>
-
-          <div class="row mb-1">
-            <div
-              class="
-                col-12
-                bg-secondary
-                d-flex
-                justify-content-center
-                align-items-center
-                fs-3
-                text-light
-              "
-              style="height: 100px"
-            >
-              Hello World
-            </div>
-          </div>
-
-          <div class="row mb-1">
-            <div
-              class="
-                col-12
-                bg-secondary
-                d-flex
-                justify-content-center
-                align-items-center
-                fs-3
-                text-light
-              "
-              style="height: 100px"
-            >
-              Hello World
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Minus
+              odit incidunt impedit quam quos corporis consectetur magni nemo
+              ipsa doloribus, eaque nulla deserunt qui delectus, veritatis,
+              officia harum. Exercitationem, maiores.
             </div>
           </div>
         </div>
+
+        <!-- RIGHT CONTENT-->
         <div class="d-none d-md-block col-md-3">
           <!-- WHATS HAPPENING-->
-          RIGHT
+          <div class="row">
+            <div class="col alert alert-secondary">
+              <p class="fs-2">Whats Happening</p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem quasi, ab autem sit numquam, minima nulla laborum,
+              harum error temporibus voluptates molestiae. Soluta quae repellat
+              voluptatum unde magni dolorem autem.
+            </div>
+          </div>
+
+          <div class="row">
+            <div class="col p-0">
+              <div class="alert alert-secondary mb-0 fs-2">
+                Best Holiday Vacations
+              </div>
+              <img
+                src="https://picsum.photos/400"
+                alt=""
+                style="height: 250px; width: 100%; object-fit: cover"
+              />
+            </div>
+          </div>
         </div>
       </div>
     </div>
