--- a/12.html
+++ b/12.html
@@ -30,6 +30,27 @@
             </div>
           </div>
 
+          <div class="row justify-content-center">
+            <div
+              class="
+                col-8
+                d-flex
+                flex-column
+                justify-content-center
+                align-items-center
+              "
+              style="height: 300px"
+            >
+              <div class="fs-1">Pricing</div>
+              <div class="text-center text-muted fs-4">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Cupiditate earum possimus repellendus illo ullam, voluptas vero
+                dignissimos voluptatibus natus fuga expedita molestiae et, magni
+                blanditiis beatae nesciunt numquam recusandae accusamus.
+              </div>
+            </div>
+          </div>
+
           <div
             class="d-flex flex-column align-items-center justify-content-center"
             style="height: 250px"
@@ -43,49 +64,6 @@
               ducimus alias, quo hic odio et vitae atque necessitatibus ea
               labore deleniti, sunt totam beatae officia voluptatem quaerat
               pariatur. Nulla.
-            </div>
-          </div>
-
-          <div class="row">
-            <div class="col">
-              <div class="card">
-                <div class="card-header">Featured</div>
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">
-                    With supporting text below as a natural lead-in to
-                    additional content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card">
-                <div class="card-header">Featured</div>
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">
-                    With supporting text below as a natural lead-in to
-                    additional content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
-            </div>
-            <div class="col">
-              <div class="card">
-                <div class="card-header">Featured</div>
-                <div class="card-body">
-                  <h5 class="card-title">Special title treatment</h5>
-                  <p class="card-text">
-                    With supporting text below as a natural lead-in to
-                    additional content.
-                  </p>
-                  <a href="#" class="btn btn-primary">Go somewhere</a>
-                </div>
-              </div>
             </div>
           </div>
         </div>
